--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
 	background: #0A0A0A url(../img/bg-main.jpg) no-repeat center 0 fixed;
 	color: #29f9de;
 	font-family: Helvetica, sans-serif;
+	line-height: 1.8;
 }
 body.fixed { background-position: -512px 0;}
 a {
@@ -73,7 +74,7 @@ form {}
 header {
 	background: url(../img/header-coverup-2.jpg) no-repeat center 0 fixed;
 	width: 1024px;
-	height: 250px;
+	height: 200px;
 	margin: -1px auto 0;
 	position: fixed;
 	top: 0;
@@ -86,7 +87,7 @@ header .logo {
 	width: 438px;
 	height: 199px;
 	text-indent: -9999px;
-	margin-top: 30px;
+	margin-top: 10px;
 	z-index: 111;
 }
 .cobweb {
@@ -157,7 +158,7 @@ footer {
 	margin: auto;
 }
 .content-container {
-	margin-top: 250px;
+	margin-top: 200px;
 	overflow: hidden;
 }
 .column-1 {
@@ -169,9 +170,9 @@ footer {
 }
 .column-2 {
 	background: url(../img/bg-content.png) no-repeat 0 0 fixed;
-	width: 752px;
+	width: 792px;
 	float: right;
-	padding: 100px 0 0 100px;
+	padding: 40px 0 0 60px;
 }
 .content-body, .content-title {
 	background: url(../img/content-bg.png) repeat;
@@ -180,13 +181,14 @@ footer {
 	font-size: 18px;
 	text-transform: uppercase;
 	line-height: 24px;
-	padding: 10px 30px;
+	padding: 10px 30px 9px;
 	margin-bottom: 40px;
 	float: left;
 }
 .content-body {
 	padding: 40px;
 	margin-bottom: 150px;
+	width: 652px;
 }
 .stitch-1 {
 	background: url(../img/stitch-title-1.png) no-repeat 0 center;
@@ -195,6 +197,31 @@ footer {
 	position: relative;
 	margin-left: -21px;
 }
-
+.stitch-2 {
+	background: url(../img/stitch-title-2.png) no-repeat 0 center;
+	height: 44px;
+	z-index: 1;
+	position: relative;
+	margin-left: -21px;
+}
+.stitch-3 {
+	background: url(../img/stitch-title-3.png) no-repeat 0 center;
+	height: 44px;
+	z-index: 1;
+	position: relative;
+	margin-left: -27px;
+}
+ul.contact-content > li {
+	margin-bottom: 10px;
+}
+.contact-info-title {
+	width: 100px;
+	display: inline-block;
+	vertical-align: top;
+}
+ul.address {
+	display: inline-block;
+	vertical-align: top;
+}
 
 
