--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,7 @@ header .logo {
 .nav { margin: 35px 0 0 -25px;}
 .nav li {
 	-o-transform: rotate(24deg);
+	-ms-transform: rotate(24deg);
 	-moz-transform: rotate(24deg);
 	-webkit-transform: rotate(24deg);
 	transform: rotate(24deg);
@@ -120,7 +121,10 @@ header .logo {
 	text-indent: -9999px;
 	cursor: pointer;
 }
-.nav-1 a { background: url(../img/btn-about.png) no-repeat 0 0;}
+.nav-1 a {
+	margin-left: 23px;
+	background: url(../img/btn-about.png) no-repeat 0 0;
+}
 .nav-2 a { background: url(../img/btn-work.png) no-repeat 0 0;}
 .nav-3 a { background: url(../img/btn-contact.png) no-repeat 0 0;}
 
