--- a/css/main.css
+++ b/css/main.css
@@ -53,9 +53,12 @@ sup {
 	vertical-align: top;
 }
 h1 {}
-h2 {}
+h2 { margin-bottom: 6px;}
 h3 {}
-p {}
+p {
+	font-size: 13px;
+	margin-bottom: 28px;
+}
 
 /*******************************************
 
