--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,6 @@ p {
 	@Section: Forms
 
 *******************************************/
-
 form {}
 
 /*******************************************
@@ -73,19 +72,20 @@ form {}
 	@Section: Header
 
 *******************************************/
-
 header {
-	background: url(../img/header-coverup-2-copy.jpg) no-repeat center 0 fixed;
+	/*background: url(../img/header-coverup-2-copy.jpg) no-repeat center 0 fixed;*/
 	width: 1024px;
 	height: 200px;
-	margin: -1px auto 0;
-	position: fixed;
-	top: 0;
+	margin: 0 auto;
+	/*position: fixed;
+	top: 0; */
 	z-index: 100;
 }
+
 header.fixed { background-position: -512px 0;}
+
 header .logo {
-	background: url(../img/logo-2.png) no-repeat;
+	background: url(../img/logo-1.png) no-repeat;
 	display: block;
 	width: 438px;
 	height: 199px;
@@ -93,6 +93,7 @@ header .logo {
 	margin-top: 10px;
 	z-index: 111;
 }
+
 .cobweb {
 	background: url(../img/cobweb.png) no-repeat;
 	width: 312px;
@@ -161,11 +162,13 @@ footer {
 *******************************************/
 
 .page {
+	position: relative;
 	width: 1024px;
 	margin: auto;
+	z-index: 111;
 }
 .content-container {
-	margin-top: 200px;
+	/*margin-top: 200px; */
 	overflow: hidden;
 }
 .column-1 {
