--- a/markup/less/superbowl.less
+++ b/markup/less/superbowl.less
@@ -452,6 +452,7 @@
 				.trophy {
 					background: url(../img/superbowl/mobile/trophy.png) no-repeat;
 					position: absolute;
+					top: 0;
 					left: 50%;
 					margin: -75px 0 0 -85px;
 				}
