--- a/markup/css/styles.css
+++ b/markup/css/styles.css
@@ -35903,8 +35903,9 @@ form.form-1 .main-content form .bottom-row {
     background: url(../img/superbowl/mobile/the-daily-beast-bg.jpg) no-repeat;
     background-size: 100%;
     width: 70%;
+    min-height: 84px;
     height: auto;
-    padding: 0 0 6px 29%;
+    padding: 0 0 0 29%;
   }
   .superbowl-piece .superbowl-row-4 .content .sec-2 a {
     margin-top: 7px;
