--- a/markup/less/superbowl.less
+++ b/markup/less/superbowl.less
@@ -579,8 +579,9 @@
 					background: url(../img/superbowl/mobile/the-daily-beast-bg.jpg) no-repeat;
 					background-size: 100%;
 					width: 70%;
+					min-height: 84px;
 					height: auto;
-					padding: 0 0 6px 29%;
+					padding: 0 0 0 29%;
 
 					a {
 						margin-top: 7px;
