--- a/markup/less/superbowl.less
+++ b/markup/less/superbowl.less
@@ -595,9 +595,10 @@
 						}
 
 						&:hover {
+							color: @white;
 
 							i {
-								border-left: 3px solid @black;
+								border-left: 3px solid @white;
 							}
 						}
 					}
